2007-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileTest.cs: Add test cases for some .ctor(Stream...)

2007-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* MetafileTest.cs: Add test cases for more .ctors

2007-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GifCodecTest.cs: Fix typo and add Stride check.
	* IconCodecTest.cs: Fix typo.
	* PngCodecTest.cs: Fix typo and add Stride check.
	* TiffCodecTest.cs: Fix typo.

2007-04-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TestBmpCodec.cs: Reenable some NotWorking test case.
	* TestJpegCodec.cs: Reenable some NotWorking test case.
	* TiffCodecTest.cs: Reenable some NotWorking test case.

2007-04-11  Sebastien Pouliot  <sebastien@ximian.com>

	* GifCodecTest.cs: Reenable some NotWorking test cases.
	* IconCodecTest.cs: Reenable some NotWorking test cases.
	* PngCodecTest.cs: Reenable some NotWorking test cases.

2007-04-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* GifCodecTest.cs: Fix Save* test cases to check 8bpp indexed for all
	GIF saved. Added comments to why we're not getting the "right" Red.
	* TestBmpCodec.cs: Remove "NotWorking" from Bitmap32bitPixels test 
	case. The file is a 32bpp RGB (no alpha).

2007-03-28  Sebastien Pouliot  <sebastien@ximian.com>

	* TiffCodecTest.cs: Ignore both SPARC bots by using the HostIgnoreList
	mechanism.

2007-03-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* EmfPlusRecordTypeTest.cs: New. Unit tests.
	* TestColorMatrix.cs: Added some test case and reworked existing to
	fix expected/actual results and add test descriptions (which should 
	help find where the endian issue is hiding).

2007-03-14  Sebastien Pouliot  <sebastien@ximian.com> 

	* GifCodecTest.cs: Add test cases for a GIF87a image - which is the 
	format that GDI+ save GIF files (even if the original was a GIF89a).

2007-03-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* MetafileTest.cs: New. Metafile unit tests.

2007-02-16  Sebastien Pouliot  <sebastien@ximian.com>
